--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     <link rel="stylesheet" href="css/portfolio/top.css">
     <link rel="stylesheet" href="css/portfolio/tabs-galery.css">
 
-    <link rel="stylesheet" href="css/products/index.css">
     <link rel="stylesheet" href="css/products/top.css">
     <link rel="stylesheet" href="css/products/content.css">
+
+
+    <link rel="stylesheet" href="css/clients/index.css">
+    <link rel="stylesheet" href="css/clients/top.css">
 
     <title>Creative</title>
 </head>
@@ -644,8 +647,39 @@
     </div>
 </div>
 <!--End Products Area-->
-<div style="width: 100%; height: 400px; background-color: red">
-    <h1>hello</h1>
+<div class="clients-area">
+    <div class="clients-area-overlay">
+        <div class="container">
+            <div class="clients-top p-0 m-0">
+                <div class="container">
+                    <div class="clients-title pt-5 pb-3">
+                        <h4>
+                            <b>
+                                our
+                                <span>clientss</span>
+                            </b>
+                        </h4>
+                    </div>
+                    <div class="clients-desc text-center">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur <span><b>adipiscing elit.</b></span> Integer sed magna vel
+                            velit dignissim luctus eu in urna. Dapibus egestas turpis.
+                        </p>
+                    </div>
+                </div>
+                <div class="clients-content">
+                    <div class="row m-0">
+                        <div class="col-lg-6 col-12">
+                            a
+                        </div>
+                        <div class="col-lg-6 col-12">
+                            b
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
