add new elements in clients area

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT%20Sans">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" href="css/style.css">
@@ -29,6 +30,7 @@
 
     <link rel="stylesheet" href="css/clients/index.css">
     <link rel="stylesheet" href="css/clients/top.css">
+    <link rel="stylesheet" href="css/products/owl.css">
 
     <title>Creative</title>
 </head>
@@ -647,33 +649,90 @@
     </div>
 </div>
 <!--End Products Area-->
-<div class="clients-area">
+<div class="clients-area position-relative">
     <div class="clients-area-overlay">
-        <div class="container">
-            <div class="clients-top p-0 m-0">
-                <div class="container">
-                    <div class="clients-title pt-5 pb-3">
-                        <h4>
-                            <b>
-                                our
-                                <span>clientss</span>
-                            </b>
-                        </h4>
-                    </div>
-                    <div class="clients-desc text-center">
+    </div>
+    <div class="container clients-area-content">
+        <div class="clients-top p-0 m-0">
+            <div class="container">
+                <div class="clients-title pt-5 pb-3">
+                    <h4>
+                        <b>
+                            our
+                            <span>clientss</span>
+                        </b>
+                    </h4>
+                </div>
+                <div class="clients-desc text-center">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur <span><b>adipiscing elit.</b></span> Integer sed magna vel
+                        velit dignissim luctus eu in urna. Dapibus egestas turpis.
+                    </p>
+                </div>
+            </div>
+            <div class="clients-content">
+                <div class="row m-0">
+                    <div class="col-lg-6 col-12 text-center">
+                        <h5 class="pb-3">
+                            HAPPY CLIENTS SAY
+                        </h5>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur <span><b>adipiscing elit.</b></span> Integer sed magna vel
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed magna vel
                             velit dignissim luctus eu in urna. Dapibus egestas turpis.
                         </p>
-                    </div>
-                </div>
-                <div class="clients-content">
-                    <div class="row m-0">
-                        <div class="col-lg-6 col-12">
-                            a
+                        <div class="container">
+                            <div class="owl-carousel">
+                                <div>
+                                    <div class="hexagon-big-owl">
+                                        <div class="hex-big-inside-owl">
+                                            <div class="hex-big-image-owl"></div>
+                                        </div>
+                                    </div>
+                                    <h6 class="text-center mt-2 px-2">AMR SROUR</h6>
+                                </div>
+                                <div>
+                                    <div class="hexagon-big-owl">
+                                        <div class="hex-big-inside-owl">
+                                            <div class="hex-big-image-owl"></div>
+                                        </div>
+                                    </div>
+                                    <h6 class="text-center mt-2 px-2">AMR SROUR</h6>
+                                </div>
+                                <div>
+                                    <div class="hexagon-big-owl">
+                                        <div class="hex-big-inside-owl">
+                                            <div class="hex-big-image-owl"></div>
+                                        </div>
+                                    </div>
+                                    <h6 class="text-center mt-2 px-2">AMR SROUR</h6>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-lg-6 col-12">
-                            b
+                    </div>
+                    <div class="col-lg-6 col-12">
+                        <div class="container">
+                            <div class="row mx-0">
+                                <div class="col-lg-6 col-12 text-center">
+                                    <div class="clients-content-right-logos">
+                                        <h5>graphicriver</h5>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12 text-center">
+                                    <div class="clients-content-right-logos">
+                                        <h5>videohive</h5>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12 text-center">
+                                    <div class="clients-content-right-logos">
+                                        <h5>photodune</h5>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12 text-center">
+                                    <div class="clients-content-right-logos">
+                                        <h5>codecanyon</h5>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -692,6 +751,8 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="js/products/owl.js"></script>
 <script src="js/portfolio/tabs-galery.js"></script>
 </body>
 </html>
