Create teame items

--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
 
     <link rel="stylesheet" href="css/clients/index.css">
     <link rel="stylesheet" href="css/clients/top.css">
-    <link rel="stylesheet" href="css/products/owl.css">
+    <link rel="stylesheet" href="css/clients/owl.css">
+    <link rel="stylesheet" href="css/clients/content.css">
 
+
+    <link rel="stylesheet" href="css/team/index.css">
+    <link rel="stylesheet" href="css/team/top.css">
+    <link rel="stylesheet" href="css/team/content.css">
     <title>Creative</title>
 </head>
 <body>
@@ -714,22 +719,42 @@
                             <div class="row mx-0">
                                 <div class="col-lg-6 col-12 text-center">
                                     <div class="clients-content-right-logos">
-                                        <h5>graphicriver</h5>
+                                        <h5>
+                                            <span class="icon-bg">
+                                                <img class="fish" src="images/clients/fish_icon.png" alt="">
+                                            </span>
+                                            graphicriver
+                                        </h5>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-12 text-center">
                                     <div class="clients-content-right-logos">
-                                        <h5>videohive</h5>
+                                        <h5>
+                                            <span class="icon-bg">
+                                                <img class="wasp" src="images/clients/wasp.png" alt="">
+                                            </span>
+                                            videohive
+                                        </h5>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-12 text-center">
                                     <div class="clients-content-right-logos">
-                                        <h5>photodune</h5>
+                                        <h5>
+                                            <span class="icon-bg">
+                                                <img class="insect" src="images/clients/insect.png" alt="">
+                                            </span>
+                                            photodune
+                                        </h5>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-12 text-center">
                                     <div class="clients-content-right-logos">
-                                        <h5>codecanyon</h5>
+                                        <h5>
+                                            <span class="icon-bg">
+                                                <img class="eagle" src="images/clients/eagle.png" alt="">
+                                            </span>
+                                            codecanyon
+                                        </h5>
                                     </div>
                                 </div>
                             </div>
@@ -740,7 +765,256 @@
         </div>
     </div>
 </div>
-
+<!--Start Hex Line Red-->
+<div class="col-12">
+    <div class="container">
+        <div class="hex-line red">
+            <div class="hex position-absolute">
+                <div class="hex-line-center-hex">
+                    <div class="center-hex-inside">
+                        <div class="center-hex-image"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Hex Line Red-->
+<!--Start Team Area-->
+<div class="team-area">
+    <div class="team-top">
+        <div class="container">
+            <div class="team-title pt-5 pb-3">
+                <h4>
+                    <b>
+                        our
+                        <span>teamwork</span>
+                    </b>
+                </h4>
+            </div>
+            <div class="clients-desc text-center">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur <span><b>adipiscing elit.</b></span> Integer sed magna vel
+                    velit dignissim luctus eu in urna. Dapibus egestas turpis.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="team-content">
+            <div class="row mx-0">
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="team-designers-area">
+                        <div class="image">
+                            <div class="overlay">
+                                <div class="container">
+                                    <div class="row mx-0">
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-facebook-f"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-twitter"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-google-plus-g"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <img src="images/team/designer4.png" alt="" width="100%">
+                        </div>
+                        <div class="description mt-3">
+                            <div class="name">
+                                <h5>BRUCE WAYNE</h5>
+                            </div>
+                            <div class="rank">
+                                <p>Webdesigner</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="team-designers-area">
+                        <div class="image">
+                            <div class="overlay">
+                                <div class="container">
+                                    <div class="row mx-0">
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-facebook-f"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-twitter"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-google-plus-g"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <img src="images/team/designer3.png" alt="" width="100%">
+                        </div>
+                        <div class="description mt-3">
+                            <div class="name">
+                                <h5>AMR SROUR</h5>
+                            </div>
+                            <div class="rank">
+                                <p>Webdesigner</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="team-designers-area">
+                        <div class="image">
+                            <div class="overlay">
+                                <div class="container">
+                                    <div class="row mx-0">
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-facebook-f"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-twitter"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-google-plus-g"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <img src="images/team/designer3.png" alt="" width="100%">
+                        </div>
+                        <div class="description mt-3">
+                            <div class="name">
+                                <h5>SARAH DOE</h5>
+                            </div>
+                            <div class="rank">
+                                <p>Webdesigner</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="team-designers-area">
+                        <div class="image">
+                            <div class="overlay">
+                                <div class="container">
+                                    <div class="row mx-0">
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-facebook-f"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-twitter"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="content-line-hex facebook">
+                                                <div class="content-line-hex-inside">
+                                                    <div class="content-line-hex-image">
+                                                        <i class="fab fa-google-plus-g"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <img src="images/team/designer4.png" alt="" width="100%">
+                        </div>
+                        <div class="description mt-3">
+                            <div class="name">
+                                <h5>JOHAN DE</h5>
+                            </div>
+                            <div class="rank">
+                                <p>Webdesigner</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Team Area-->
+<!--Start hex-line-->
+<div class="col-12">
+    <div class="container">
+        <div class="hex-line">
+            <div class="hex position-absolute">
+                <div class="hex-line-center-hex">
+                    <div class="center-hex-inside">
+                        <div class="center-hex-image"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End hex line-->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
