--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
     <link rel="stylesheet" href="css/follow/index.css">
     <link rel="stylesheet" href="css/follow/top.css">
     <link rel="stylesheet" href="css/follow/content.css">
+
+    <link rel="stylesheet" href="css/fineus/index.css">
+    <link rel="stylesheet" href="css/fineus/top.css">
+    <link rel="stylesheet" href="css/fineus/content.css">
+
+    <link rel="stylesheet" href="css/footer/index.css">
     <title>Creative</title>
 </head>
 <body>
@@ -1576,6 +1582,96 @@
     </div>
 </div>
 <!--End follow area-->
+<!--Start Hex Line Red-->
+<div class="col-12">
+    <div class="container">
+        <div class="hex-line red">
+            <div class="hex position-absolute">
+                <div class="hex-line-center-hex">
+                    <div class="center-hex-inside">
+                        <div class="center-hex-image"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Hex Line Red-->
+<!--Start Fine Us Area-->
+<div class="fine-area">
+    <div class="fine-top py-5">
+        <div class="container">
+            <div class="fine-title pt-5 pb-3">
+                <h4>
+                    <b>
+                        Fine us
+                        <span>here</span>
+                    </b>
+                </h4>
+            </div>
+            <div class="fine-desc text-center">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur <span><b>adipiscing elit.</b></span> Integer sed magna vel
+                    velit dignissim luctus eu in urna. Dapibus egestas turpis.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="map position-relative">
+        <div class="contacts-area">
+            <div class="row mx-0">
+                <div class="col-lg-6 col-12">
+                    <div class="address-area p-3">
+                        <p>egypt,creativa</p>
+                        <p>Address: cairo 123</p>
+                        <p>Phone: +0201091915171</p>
+                        <p>Email: gfx3mr@gmail.com</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="contact-us-area p-5">
+                        <div class="title mb-3">
+                            <h4 class="m-0">SEND MESSAGE</h4>
+                        </div>
+                        <div class="content mb-3">
+                            <input type="text" class="form-control mb-3" placeholder="Name">
+                            <input type="text" class="form-control mb-3" placeholder="Email">
+                            <input type="text" class="form-control mb-3" placeholder="subject">
+                            <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
+                        </div>
+                        <div class="footer pb-4">
+                                <button class="btn">SUBMIT</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1457.0935074158538!2d-70.75659948473937!3d43.07956346598421!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb5e8c11925c54ab4!2sSamonas+Realty+Llc!5e0!3m2!1sen!2sus!4v1402966179098" width="100%" height="600" frameborder="0" style="border:0"></iframe>
+    </div>
+</div>
+<!--End Fine Us Area-->
+<!--Start Footer-->
+<div class="footer-area position-relative p-5">
+    <div class="overlay"></div>
+    <div class="container-fluid">
+        <div class="row mx-0">
+            <div class="col-lg-4 col-12"></div>
+            <div class="col-lg-4 text-center">
+                <h4>
+                    <img src="images/menu/logo.png" alt="">
+                </h4>
+            </div>
+            <div class="col-lg-4 text-lg-right text-center">
+                <p>
+                    Design by  Amr Srour
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<!--    End Footer-->
+
+
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
